# azure-ai-search-advisor

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SQUAD_BOOTSTRAP.md  azure.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-api.yml  deploy-docs.yml  deploy-infra.yml  deploy-ui.yml  validate-infra.yml
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/casting/: history.json  policy.json  registry.json
.squad/identity/: now.md  wisdom.md
data/inputs/: over_provisioned.json  serverless_candidate.json  underutilized_features.json  well_optimized.json
data/outputs/: sample_analysis_result.json  sample_cost_report.json  sample_recommendations.json
docs/: architecture.md  contributing.md  getting-started.md  index.md
docs/api/: analyze.md  discover.md  history.md  index.md  recommend.md  simulate.md
docs/deployment/: azd.md  bicep.md  docker.md  index.md  terraform.md
docs/ui/: index.md
infra/: README.md  main.bicep
tests/: conftest.py  test_api_endpoints.py  test_cost_modeling_and_recommendations.py  test_cost_modeling_edge_cases.py  test_discover_endpoints.py  test_feature_analyzer.py  test_integration_e2e.py  test_live_discovery_api.py  test_middleware.py  test_models_and_ingestion.py  test_provisioning_analyzer.py  test_recommendation_generators.py  test_resilience.py  test_sku_analyzer.py  test_tenant_api.py
ui/: .env.development  .env.example  .env.production  README.md  index.html  package-lock.json  package.json  staticwebapp.config.json
(+138 files in other folders)
