[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "azure-ai-search-advisor"
version = "0.1.0"
description = "Scaffolded FastAPI service for Azure AI Search analysis and recommendations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "microsoft-agent-framework>=0.1",
  "pydantic>=2.8,<3.0",
  "azure-identity>=1.17,<2.0",
  "azure-ai-projects>=1.0,<2.0",
  "openai>=1.35,<2.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/azure_ai_search_advisor"]
